--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -4,4 +4,4 @@
 		<link rel="stylesheet" media="all" href="main.css"/>
 	</head>
 	<body>
-	<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
