--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>TogetherLess</title>
-		<link rel="stylesheet" media="all" href="main.css"/>
+		<link rel="stylesheet" media="all" href="/resource/main.css"/>
 	</head>
 	<body>
 	<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
