--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -5,3 +5,5 @@
 	</head>
 	<body>
 	<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="/resource/jquery.getParams.js"></script>
+	<script type="text/javascript" src="/resource/cookie.js"></script>
