--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>TogetherLess</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" media="all" href="/resource/main.css"/>
 	</head>
 	<body>
