--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" media="all" href="/resource/main.css"/>
 	</head>
 	<body>
-	<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
-	<script type="text/javascript" src="/resource/jquery.getParams.js"></script>
-	<script type="text/javascript" src="/resource/cookie.js"></script>
+		<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="/resource/jquery.getParams.js"></script>
+		<script type="text/javascript" src="/resource/cookie.js"></script>
+		<div class="errmsg" style="display: none;"></div>
