--- a/WEB/main.css
+++ b/WEB/main.css
@@ -6,8 +6,9 @@
 }
 
 .errmsg{
-	border-color:	#FF0000; 
+	border-color:	#BB0000; 
 	border-style:	solid; 
 	border-width:	1px;
-	color:			#FF0000;
+	color:			#BB0000;
+	background-color: rgba(187,0,0,0.2);
 }
