create JS registrationAPI. Not finished... in activationcall is a sample of ajax retValue!

--- a/WEB/include/header.html
+++ b/WEB/include/header.html
@@ -9,4 +9,5 @@
 		<script type="text/javascript" src="/resource/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="/resource/jquery.getParams.js"></script>
 		<script type="text/javascript" src="/resource/cookie.js"></script>
+		<script type="text/javascript" src="/resource/register.js"></script>
 		<div class="errmsg" style="display: none;"></div>
