introduce JS model & view (controller is missing at the moment) for measurement

--- a/WEB/include/headerApp.html
+++ b/WEB/include/headerApp.html
@@ -24,5 +24,11 @@
 		<nav>
 			<img id="navLogo" src="/resource/images/logo.png"/>
 			<h1 id="navTitle">Title</h1>
+			<ul id="navigation">
+				<li><a href="/resource/overview.html">Home</a></li>
+				<li><a href="/resource/measurement.html">Gewicht</a></li>
+				<li>Gruppe</li>
+				<li>Logout</li>
+			</ul>
 		</nav>
 		<div class="errmsg" style="display: none;"></div>
