renamed measurement.html to weightLog.html

--- a/WEB/include/headerApp.html
+++ b/WEB/include/headerApp.html
@@ -26,7 +26,7 @@
 			<h1 id="navTitle">Title</h1>
 			<ul id="navigation">
 				<li><a href="/resource/overview.html">Home</a></li>
-				<li><a href="/resource/measurement.html">Gewicht</a></li>
+				<li><a href="/resource/weightLog/weightLog.html">Gewicht</a></li>
 				<li>Gruppe</li>
 				<li>Logout</li>
 			</ul>
